--- a/Main.xaml
+++ b/Main.xaml
@@ -73,7 +73,7 @@
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
             </ActivityAction.Argument>
-            <Sequence DisplayName="Do  Actvity" sap:VirtualizedContainerService.HintSize="376,994" sap2010:WorkflowViewState.IdRef="Sequence_1">
+            <Sequence DisplayName="Do  Actvity = Abbas" sap:VirtualizedContainerService.HintSize="376,994" sap2010:WorkflowViewState.IdRef="Sequence_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
